--- a/src/app/places/places.page.html
+++ b/src/app/places/places.page.html
@@ -1,9 +1,15 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Places</ion-title>
-  </ion-toolbar>
-</ion-header>
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
 
-<ion-content>
-
-</ion-content>
+      <ion-tab-button tab="discover">
+        <ion-icon name="map"></ion-icon>
+        <ion-label>Discover</ion-label>
+      </ion-tab-button>
+  
+      <ion-tab-button tab="offers">
+        <ion-icon name="information-circle"></ion-icon>
+        <ion-label>Offers</ion-label>
+        <ion-badge>6</ion-badge>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
