--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -1,9 +1,44 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>discover</ion-title>
+    <ion-title>Parki narodowe</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" size-sm="8" offset-sm="2">
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>
+              {{ aPlaces[0].title }}
+            </ion-card-title>
+            <ion-card-subtitle>
+              Bilet normalny: <strong>{{ aPlaces[0].ticketNormalPrice |  currency:'PLN':'symbol-narrow':'0.2-2':'pl' }} </strong>
+            </ion-card-subtitle>
+          </ion-card-header>
+          <ion-img [src]="aPlaces[0].logoUrl"></ion-img>
+          <ion-card-content>
+            <p>
+              {{ aPlaces[0].description }}
+            </p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="12" size-sm="8" offset-sm="2">
+        <ion-item *ngFor="let oPlace of aPlaces.slice(1)">
+          <ion-thumbnail slot="start">
+            <ion-img [src]="oPlace.logoUrl"></ion-img>
+          </ion-thumbnail>
+          <ion-label>
+            <h2>{{ oPlace.title }}</h2>
+            <p>{{ oPlace.description }}</p>
+          </ion-label>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
 </ion-content>
