--- a/src/app/places/offers/new-offer/new-offer.page.html
+++ b/src/app/places/offers/new-offer/new-offer.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>new-offer</ion-title>
+    <ion-title>Dodaj</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button text="" defaultHref="/places/tabs/offers"></ion-back-button>
+    </ion-buttons>    
   </ion-toolbar>
 </ion-header>
 
