--- a/src/app/places/discover/place-detail/place-detail.page.html
+++ b/src/app/places/discover/place-detail/place-detail.page.html
@@ -1,9 +1,12 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>place-detail</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button text="" defaultHref="/places/tabs/discover"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Informacje</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <partial-place-card [oPlace]="oPlace"></partial-place-card>
 </ion-content>
