--- a/src/app/places/offers/offer-bookings/offer-bookings.page.html
+++ b/src/app/places/offers/offer-bookings/offer-bookings.page.html
@@ -1,9 +1,22 @@
-<ion-header>
+<ion-header > 
   <ion-toolbar>
-    <ion-title>offer-bookings</ion-title>
+    <ion-title>Podgląd</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-content padding>
+    <ion-grid>
+      <ion-row>
+        <ion-col size="12" size-sm="8" offset-sm="2">
+          <partial-place-card [oPlace]="oPlace"></partial-place-card>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="12" size-sm="8" offset-sm="2">
+          <ion-button margin color="primary" [routerLink]="['/', 'places','tabs','offers','edit', oPlace.id]">Edytuj</ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
 
 </ion-content>
