--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,36 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu  side="start" type="reveal" contentId="main"  >
+    <ion-header>
+      <ion-toolbar color="primary">
+        <ion-title>
+          Nasze Parki
+        </ion-title>
+      </ion-toolbar>
+    </ion-header>      
+      <ion-content>
+        <ion-menu-toggle>
+          <ion-list>
+            <ion-item button lines="full" routerLink="/places/tabs/discover">
+              <ion-icon name="map" slot="start"></ion-icon>
+              <ion-label>Discover</ion-label>
+            </ion-item>
+            <ion-item button lines="full" routerLink="/places/tabs/offers"> 
+              <ion-icon name="information-circle" slot="start"></ion-icon>
+              <ion-label>Offers</ion-label>            
+            </ion-item>
+            <ion-item button lines="full">
+              <ion-icon name="exit" slot="start"></ion-icon>
+              <ion-label>Logout</ion-label>            
+            </ion-item >
+            <ion-item button detail (click)="onCloseSideDrawer()">
+              <ion-label>
+                Back
+              </ion-label>
+            </ion-item>                    
+          </ion-list>
+        </ion-menu-toggle>
+
+      </ion-content>
+  </ion-menu>
+  <ion-router-outlet  id="main"></ion-router-outlet>
 </ion-app>
