--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,9 +18,9 @@
               <ion-icon name="information-circle" slot="start"></ion-icon>
               <ion-label>Offers</ion-label>            
             </ion-item>
-            <ion-item button lines="full">
+            <ion-item button lines="full"  (click)="onLogout()">
               <ion-icon name="exit" slot="start"></ion-icon>
-              <ion-label>Logout</ion-label>            
+              <ion-label >Logout</ion-label>            
             </ion-item >
             <ion-item button detail (click)="onCloseSideDrawer()">
               <ion-label>
