add modal to buy ticket

--- a/src/app/places/discover/place-detail/place-detail.page.html
+++ b/src/app/places/discover/place-detail/place-detail.page.html
@@ -9,4 +9,5 @@
 
 <ion-content>
   <partial-place-card [oPlace]="oPlace"></partial-place-card>
+  <ion-button color="primary" (click)="onBuy()">Kub bilet</ion-button>
 </ion-content>
